erDiagram
  PROJECTS ||--o{ TODOS : tracks
  USERS ||--o{ TODOS : assigned/creates/reviews
  DOCUMENTS ||--o{ TODOS : evidence
  DOCUMENT_CHUNKS ||--o{ TODOS : evidence
  PROJECTS ||--o{ ISSUES : logs
  USERS ||--o{ ISSUES : reports/assigned
  DOCUMENTS ||--o{ ISSUES : evidence

  PROJECTS {
    uuid id PK
    uuid team_id FK
    uuid created_by FK
    string name
    text description
    string status
    date start_date
    date end_date
    timestamp created_at
    timestamp updated_at
  }

  USERS {
    uuid id PK
    string name
    string email UK
    text password_hash
    string role
    timestamp created_at
    timestamp updated_at
  }

  DOCUMENTS {
    uuid id PK
    uuid project_id FK
    uuid uploaded_by FK
    string file_name
    string file_type
    string source_type
    text storage_path
    string status
    timestamp uploaded_at
  }

  DOCUMENT_CHUNKS {
    uuid id PK
    uuid document_id FK
    uuid project_id FK
    text content
    int chunk_index
    int page_number
    timestamp created_at
  }

  TODOS {
    uuid id PK
    uuid project_id FK
    uuid assignee_id FK
    uuid created_by FK
    uuid source_document_id FK
    uuid source_chunk_id FK
    uuid linked_issue_id FK
    uuid reviewed_by FK
    string title
    text description
    string status
    string priority
    string source_type
    string approval_status
    int confidence_score
    timestamp reviewed_at
    timestamp due_date
    timestamp created_at
    timestamp updated_at
  }

  ISSUES {
    uuid id PK
    uuid project_id FK
    uuid reporter_id FK
    uuid assignee_id FK
    uuid source_document_id FK
    string title
    text description
    string severity
    string status
    string source_type
    int confidence_score
    boolean is_candidate
    timestamp created_at
    timestamp updated_at
  }
